<resources>

  <!-- Common -->
  <string name="app_name">BookLife</string>
  <string name="confirm">Confirm</string>
  <string name="cancel">Cancel</string>
  <string name="amazon">Amazon</string>
  <string name="home">Home</string>
  <string name="edit">Edit</string>
  <string name="update">Update</string>

  <!-- Login -->
  <string name="login_prompt_email">Email</string>
  <string name="login_prompt_password">Password</string>
  <string name="login_sign_in">Sign in</string>
  <string name="login_error_invalid_email">This email address is invalid</string>
  <string name="login_error_invalid_password">This password is too short</string>
  <string name="login_error_incorrect_password">This password is incorrect</string>
  <string name="login_error_field_required">This field is required</string>
  <string name="login_forget_password">Forget your password?</string>
  <string name="login_sign_up">Sign Up</string>
  <string name="login_create_account">Doesn\'t have an account?</string>

  <!-- Search -->
  <string name="book">Book</string>
  <string name="menu_search">Search</string>
  <string name="search_hint">Title・Author</string>

  <!-- Book -->
  <string name="book_reading">Reading</string>
  <string name="book_read">Read</string>
  <string name="book_to_read">To Read</string>
  <string name="book_quitted">Quitted</string>
  <string name="book_register">Register</string>
  <string name="book_edit">Edit</string>
  <string name="book_registered">%s Registered</string>
  <string name="book_update">%s Updated</string>
  <string name="book_spoilers">Spoilers</string>
  <string name="book_read_date">Read Date</string>
  <string name="book_impressions_review">Impressions・Review</string>

  <!-- Book Record -->
  <string name="book_record_page">Page</string>
  <string name="book_record_page_par_day">Page/Day</string>
  <string name="book_record_page_number">Page</string>
  <string name="book_record_volume">Volume</string>
  <string name="book_record_volume_number">Volume</string>
  <string name="book_record_monthly_average">Monthly Average</string>
  <string name="book_record_reading_volume">Reading volume</string>
  <string name="book_record_reading_volume_last_month">Reading volume of last month</string>

  <!-- Menu -->
  <string name="licenses">Open Source Licenses</string>
  <string name="settings">Settings</string>

  <!-- Option -->


  <!-- Error -->
  <string name="error_login">E-mail or Password is wrong</string>
  <string name="error_review_update">Update Failed</string>

  <!-- Feature -->
  <string name="coming_soon">Coming Soon!!</string>

  <!-- Shell / Home / Search / Settings -->
  <string name="privacy_policy">Privacy Policy</string>
  <string name="sign_out">Sign out</string>
  <string name="sign_out_confirm">Do you want to sign out?</string>
  <string name="version">Version</string>
  <string name="back">Back</string>
  <string name="error_barcode_scan">Barcode scan failed</string>
  <string name="home_load_error">Failed to load data</string>
  <string name="retry">Retry</string>
  <string name="main_more_options">More options</string>
  <string name="main_add_menu">Add book</string>
  <string name="main_menu_barcode_scan">Scan barcode</string>
  <string name="main_menu_record_voice">Voice record</string>
  <string name="session_expired">Session expired. Please sign in again.</string>
  <string name="load_error">Failed to load</string>
  <string name="search_no_results">No results</string>
  <string name="search_error">Search failed</string>
  <string name="search_clear">Clear</string>

</resources>
