<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

  <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:paddingBottom="@dimen/activity_vertical_margin"
      android:paddingLeft="@dimen/space_medium"
      android:paddingRight="@dimen/space_medium"
      android:paddingTop="@dimen/activity_vertical_margin"
      tools:context="com.futabooo.android.booklife.screen.home.HomeFragment"
      >

    <TextView
        android:id="@+id/fragment_home_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/space_medium"
        android:textSize="@dimen/app_text_size_xlarge"
        tools:text="2017年6月"
        />

    <LinearLayout
        android:id="@+id/fragment_home_page_area"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/fragment_home_date"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        >

      <androidx.cardview.widget.CardView
          android:id="@+id/reading_page_area"
          android:layout_width="0dp"
          android:layout_height="match_parent"
          android:layout_margin="@dimen/space_medium"
          android:layout_weight="1"
          card_view:cardCornerRadius="4dp"
          >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/space_medium"
            >
          <TextView
              android:id="@+id/reading_page_area_title"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/book_record_page_number"
              android:textSize="@dimen/app_text_size_medium"
              />
          <androidx.legacy.widget.Space
              android:id="@+id/reading_page_area_space"
              android:layout_width="wrap_content"
              android:layout_height="12dp"
              android:layout_below="@id/reading_page_area_title"
              />
          <TextView
              android:id="@+id/reading_page_current_month"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_below="@id/reading_page_area_space"
              android:textSize="@dimen/app_text_size_xlarge"
              tools:text="1000"
              />
          <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_alignBottom="@id/reading_page_current_month"
              android:layout_below="@id/reading_page_area_space"
              android:layout_toRightOf="@id/reading_page_current_month"
              android:gravity="bottom"
              android:text="@string/book_record_page"
              android:textSize="@dimen/app_text_size_small"
              />
          <androidx.legacy.widget.Space
              android:layout_width="wrap_content"
              android:layout_height="20dp"
              android:layout_below="@id/reading_page_current_month"
              />
        </RelativeLayout>
      </androidx.cardview.widget.CardView>

      <androidx.cardview.widget.CardView
          android:id="@+id/reading_page_par_day_area"
          android:layout_width="0dp"
          android:layout_height="match_parent"
          android:layout_margin="@dimen/space_medium"
          android:layout_weight="1"
          card_view:cardCornerRadius="4dp"
          >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/space_medium"
            >
          <TextView
              android:id="@+id/reading_page_par_day_area_title"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/book_record_monthly_average"
              android:textSize="@dimen/app_text_size_medium"
              />
          <androidx.legacy.widget.Space
              android:id="@+id/reading_page_par_day_area_space"
              android:layout_width="wrap_content"
              android:layout_height="12dp"
              android:layout_below="@id/reading_page_par_day_area_title"
              />
          <TextView
              android:id="@+id/reading_page_par_day_current_month"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_below="@id/reading_page_par_day_area_space"
              android:textSize="@dimen/app_text_size_xlarge"
              tools:text="100"
              />
          <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_alignBottom="@id/reading_page_par_day_current_month"
              android:layout_below="@id/reading_page_par_day_area_space"
              android:layout_toRightOf="@id/reading_page_par_day_current_month"
              android:gravity="bottom"
              android:text="@string/book_record_page_par_day"
              android:textSize="@dimen/app_text_size_small"
              />
          <androidx.legacy.widget.Space
              android:layout_width="wrap_content"
              android:layout_height="20dp"
              />
        </RelativeLayout>
      </androidx.cardview.widget.CardView>
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/reading_volume_area"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/fragment_home_page_area"
        android:layout_margin="@dimen/space_medium"
        card_view:cardCornerRadius="4dp"
        >
      <RelativeLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:padding="@dimen/space_medium"
          >
        <TextView
            android:id="@+id/reading_volume_this_month_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/space_medium"
            android:text="@string/book_record_volume_number"
            android:textSize="@dimen/app_text_size_medium"
            />
        <androidx.legacy.widget.Space
            android:id="@+id/reading_volume_this_month_space"
            android:layout_width="wrap_content"
            android:layout_height="12dp"
            android:layout_below="@+id/reading_volume_this_month_title"
            />
        <TextView
            android:id="@+id/reading_volume_current_month"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/reading_volume_this_month_space"
            android:textSize="@dimen/app_text_size_xlarge"
            tools:text="200"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/reading_volume_current_month"
            android:layout_below="@id/reading_volume_this_month_space"
            android:layout_toRightOf="@id/reading_volume_current_month"
            android:gravity="bottom"
            android:text="@string/book_record_volume"
            android:textSize="@dimen/app_text_size_small"
            />
        <androidx.legacy.widget.Space
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            />
      </RelativeLayout>
    </androidx.cardview.widget.CardView>

  </RelativeLayout>
</layout>